--- a/external/linux/CMakeLists.txt
+++ b/external/linux/CMakeLists.txt
@@ -1,19 +1,20 @@
 
 add_library(uv STATIC IMPORTED GLOBAL)
 set_target_properties(uv PROPERTIES
-  IMPORTED_LOCATION ${linux_lib_dir}/libuv/libuv_a.a
-  INTERFACE_INCLUDE_DIRECTORIES ${platform_spec_path}/include/libuv
+  IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/libuv/libuv_a.a
+  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/include/libuv
 )
 
 add_library(libz STATIC IMPORTED GLOBAL)
 set_target_properties(libz PROPERTIES
-  IMPORTED_LOCATION ${linux_lib_dir}/libz/libz.a
-  INTERFACE_INCLUDE_DIRECTORIES ${platform_spec_path}/include/libz
+  IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/libz/libz.a
+  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/include/libz
 )
 
 add_library(v8 STATIC IMPORTED GLOBAL)
 set_target_properties(v8 PROPERTIES
-  IMPORTED_LOCATION ${linux_lib_dir}/v8/libv8_monolith.a
+  IMPORTED_LOCATION ${CMAKE_CURRENT_LIST_DIR}/lib/v8/libv8_monolith.a
+  INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_LIST_DIR}/include/v8
 )
 
 set(se_libs_name v8 uv)
