--- a/cocos/CMakeLists.txt
+++ b/cocos/CMakeLists.txt
@@ -15,4 +15,4 @@ include(${CMAKE_CURRENT_LIST_DIR}/external/CMakeLists.txt)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/base ccbase)
 add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/jswrapper ccjswrapper)
 # add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/websocket-server ccws-server)
-add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/setpl ccsetpl)
+add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/sebind ccsebind)
